Include sample configuration for webassets

--- a/sample.ini
+++ b/sample.ini
@@ -336,8 +336,8 @@ returned_id = cn
 # http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
 ################################################################################
 [loggers]
-keys = root, sqlalchemy, alembic, occams
-# "keys = root, sqlalchemy, alembic, occams, exc_logger" (production)
+keys = root, sqlalchemy, alembic, webassets, occams
+# "keys = root, sqlalchemy, alembic, webassets, occams, exc_logger" (production)
 
 [handlers]
 keys = console
@@ -362,6 +362,11 @@ qualname = occams
 level = INFO
 handlers =
 qualname = alembic
+
+[logger_webassets]
+level = INFO
+handlers =
+qualname = webassets
 
 [logger_sqlalchemy]
 level = INFO
