Fix typo in sample config

--- a/sample.ini
+++ b/sample.ini
@@ -151,7 +151,7 @@ celery.include =
   occams_studies.tasks
 
 celery.beat =
-  make-code-book-hourly
+  make-codebook-hourly
 
 celery.beat.make-codebook-hourly.task = make_codebook
 celery.beat.make-codebook-hourly.schedule = timedelta
