--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include *.txt *.ini *.cfg *.rst
-include VERSION
+include LICENSE VERSION
 recursive-include occams *.ico *.png *.css *.gif *.jpg *.pt *.txt *.mak *.mako *.js *.html *.xml
