Add redis port number so celery doesn't fail

--- a/develop.ini
+++ b/develop.ini
@@ -16,7 +16,7 @@ pyramid.includes = pyramid_debugtoolbar
 
 debugtoolbar.hosts = 0.0.0.0/0
 
-redis.url = redis://redis/0
+redis.url = redis://redis:6379/0
 
 webassets.debug = true
 webassets.auto_build = true
