Include studies database versions

--- a/develop.ini
+++ b/develop.ini
@@ -60,7 +60,7 @@ studies.export.plans =
 [alembic]
 script_location = occams:alembic/
 sqlalchemy.url = postgresql://occams@postgres/occams
-version_locations = occams_datastore:versions occams_forms:versions
+version_locations = occams_datastore:versions occams_forms:versions occams_studies:versions
 blame = bitcore@ucsd.edu
 
 [server:main]
