--- a/requirements-develop.txt
+++ b/requirements-develop.txt
@@ -1,58 +1,23 @@
 #
-# Environment packages
-#
-# This file is mostily a duplicate of what is in setup.py so that
-# Docker can cache the dependency installation step. If this file was not
-# present you will have to re-install all dependencies every time you make
-# code change in development.
-#
-# NOTE: If you edit this file, make sure to update setup.py
+# Developer-specific packages
 #
 
-alembic
-babel
-celery[redis]>=3.1,<3.1.99
-cssmin
-filemagic
-gevent
-gunicorn==19.3
-humanize
-jsmin
-lingua
-psycopg2
-python-dateutil
-python-slugify
-pyramid>=1.7
-pyramid_chameleon
-pyramid_exclog
-pyramid_tm
-pyramid_redis_sessions
-pyramid_redis
-pyramid_webassets
-pyramid_who
-repoze.who>=2.3.0
-six
-SQLAlchemy
-tabulate
-wtforms>=2.0.0
-wtforms-json
-wtforms-components
-zope.sqlalchemy
+-r ./requirements.txt
 
--e git+https://github.com/razorlabs/occams_datastore@master#egg=occams_datastore
--e git+https://github.com/razorlabs/occams@master#egg=occams
--e git+https://github.com/razorlabs/occams_accounts@master#egg=occams_accounts
-
-# Development packages
+# Documentation
 sphinx
 sphinx-autobuild
+
+# Interactive debugging
 pyramid_debugtoolbar
+
+# Unit tests
 pytest
 pytest-cov
 fake-factory
 WebTest
 beautifulsoup4
 mock
+
+# Developer-managed accounts
 who_dev>=0.0.2
-
-
