--- a/requirements.txt
+++ b/requirements.txt
@@ -3,30 +3,28 @@
 #
 
 alembic
-babel
-celery[redis]>=3.1,<3.1.99
+celery[redis]
 cssmin
-filemagic
 gevent
 gunicorn
 humanize
-lingua
 psycopg2
 python-dateutil
+python-magic
 python-slugify
-pyramid>=1.7
+pyramid
 pyramid_chameleon
 pyramid_exclog
-pyramid_tm==0.12.1
+pyramid_tm
 pyramid_redis_sessions
 pyramid_redis
 pyramid_webassets
 pyramid_who
 repoze.who>=2.3.0
 six
-SQLAlchemy>=1.0.0,<1.1.0
+SQLAlchemy
 tabulate
-wtforms>=2.0.0
+wtforms
 wtforms-json
 wtforms-components
 zope.sqlalchemy
