Extract blame user from the connection uri string

--- a/develop.ini
+++ b/develop.ini
@@ -43,11 +43,6 @@ celery.blame = celery@localhost
 studies.blob.dir = /files/blobs
 studies.export.dir = /files/exports
 
-[alembic]
-script_location = alembic/
-sqlalchemy.url = postgresql://occams@postgres/occams
-blame = bitcore@ucsd.edu
-
 [server:main]
 use = egg:gunicorn#main
 host = 0.0.0.0
@@ -121,7 +116,7 @@ use = who_dev:JSONPropertiesPlugin
 source_key = groups
 
 [loggers]
-keys = root, sqlalchemy, alembic, webassets, occams
+keys = root, sqlalchemy, webassets, occams
 
 [handlers]
 keys = console
@@ -137,11 +132,6 @@ handlers = console
 level = DEBUG
 handlers =
 qualname = occams
-
-[logger_alembic]
-level = INFO
-handlers =
-qualname = alembic
 
 [logger_webassets]
 level = INFO
