Validate proper credential inputs

--- a/develop.ini
+++ b/develop.ini
@@ -102,7 +102,7 @@ use = who_dev:JSONAuthenticatorPlugin
 data = {
     "develop@local":  {
       "password": "develop",
-      "properties": {"first_name": "Developer", "last_name": "User", "email": "develop@local"},
+      "properties": {"first_name": "Developer", "last_name": "User", "email": "develop@localhost.local"},
       "groups": ["member", "administrator"]
     }
   }
