--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,9 @@
     "jquery": "2.x",
     "jquery-cookie": "~1.4.1"
   },
+  "resolutions": {
+    "jquery": "2.x"
+  },
   "devDependencies": {
     "mocha": "~2.1.0"
   },
