Fix issue where login validation messages are not displayed

--- a/develop.ini
+++ b/develop.ini
@@ -100,7 +100,7 @@ reissue_time = 360
 use = who_dev:JSONAuthenticatorPlugin
 # Test users, modify as needed and restart app service
 data = {
-    "develop@local":  {
+    "develop@localhost.local":  {
       "password": "develop",
       "properties": {"first_name": "Developer", "last_name": "User", "email": "develop@localhost.local"},
       "groups": ["member", "administrator"]
