--- a/requirements.txt
+++ b/requirements.txt
@@ -2,29 +2,34 @@
 # Production requirements
 #
 
-alembic
-celery[redis]<4.0.0
-cssmin
-gevent
-gunicorn
-humanize
-psycopg2
-python-dateutil
-python-magic
-python-slugify
-pyramid
-pyramid_chameleon
-pyramid_exclog
-pyramid_tm
-pyramid_redis_sessions
-pyramid_redis
-pyramid_webassets
-pyramid_who
-repoze.who>=2.3.0
-six
-SQLAlchemy
-tabulate
-wtforms
-wtforms-json
-wtforms-components
-zope.sqlalchemy
+alembic==0.9.*                              # Database structure migrations
+celery[redis]==3.1.*                        # Asynchronous queue
+cssmin==0.2.*                               # CSS asset compression
+gevent==1.2.*                               # Enables usage of SSE on gunicorn
+gunicorn==19.7.*                            # WSGI server
+humanize==0.5.*                             # human readable units of measurement
+jsmin==2.2.*                                # Javascript asset copression
+ldap3==1.*
+psycopg2==2.7.*                             # PostgreSQL database driver
+python-dateutil==2.*                        # Better fuzzy date parsing
+python-magic==0.4.*                         # File input validation
+python-slugify==1.*                         # Path-friendly name generator
+pyramid==1.7.*                              # Framework
+pyramid_chameleon==0.*                      # Templating
+pyramid_exclog==0.*                         # Error log messaging for production
+pyramid_redis==0.1.*
+pyramid_redis_sessions==1.0.*               # Redis-based HTTP session
+pyramid_tm==1.*                             # Centralized transactions
+pyramid_webassets==0.9.*                    # Asset management and compilation
+pyramid_who==0.3.*                          # User authentication
+repoze.who==2.*
+rutter==0.*                                 # Virtual URL path proxy-passing
+six==1.*                                    # Python 2 & 3 compatibility
+sqlalchemy==1.0.*                           # ORM
+tabulate==0.7.*                             # ASCII tables for CLI pretty printing
+unicodecsv==0.14.* ; python_version < '3.0' # Handles unicode processing in Python 2
+who_ldap==3.2.*
+wtforms==2.*                                # Data input validation
+wtforms-components==0.10.*
+wtforms-json==0.3.*
+zope.sqlalchemy==0.7.*                      # Connects sqllachemy to pyramid_tm
