--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ pyramid_who==0.3.*                          # User authentication
 repoze.who==2.*
 rutter==0.*                                 # Virtual URL path proxy-passing
 six==1.*                                    # Python 2 & 3 compatibility
-sqlalchemy==1.0.*                           # ORM
+SQLAlchemy>=1.3.0                           # ORM
 tabulate==0.7.*                             # ASCII tables for CLI pretty printing
 unicodecsv==0.14.* ; python_version < '3.0' # Handles unicode processing in Python 2
 who_ldap==3.2.*
