Use version pins as much as posssible

--- a/develop.ini
+++ b/develop.ini
@@ -29,7 +29,7 @@ redis.sessions.secret = sekrit
 redis.sessions.prefix = occams-session:
 redis.sessions.timeout = 36000
 
-sqlalchemy.url = postgresql://occams@postgres/occams
+sqlalchemy.url = postgresql://occams:occams@postgres/occams
 
 occams.org.name = dev
 occams.org.title = Test Orgnaization
