--- a/alembic.ini
+++ b/alembic.ini
@@ -3,7 +3,7 @@
 # path to migration scripts
 script_location = alembic/
 
-sqlalchemy.url = postgresql://occams@postgres/occams
+sqlalchemy.url = postgresql://occams:occams@postgres/occams
 
 # Logging configuration
 [loggers]
