--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,59 +3,71 @@
 # DO NOT USE FOR PRODUCTION
 #
 
-app:
-  build: .
-  command: dockerize -wait tcp://postgres:5432 ./docker-app-entrypoint.sh
-  restart: always
-  ports:
-    - "3000:3000"
-  links:
-    - postgres:postgres
-    - postgres-tests:postgres-tests
-    - redis:redis
-  volumes:
-    - ./occams:/app/occams
-    - ./alembic:/app/alembic
-    - ./develop.ini:/app/develop.ini
-    - ./bower.json:/app/bower.json
-    - ./tests:/app/tests
-    - uploads:/files/uploads
-    - exports:/files/exports
+version: "3.7"
 
-celery:
-  build: .
-  command: dockerize -wait tcp://postgres:5432 ./docker-celery-entrypoint.sh
-  restart: always
-  environment:
-    - C_FORCE_ROOT=1
-  links:
-    - postgres:postgres
-    - redis:redis
-  volumes_from:
-    - app
+services:
+  app:
+    build: .
+    command: dockerize -wait tcp://postgres:5432 ./docker-app-entrypoint.sh
+    restart: always
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - ./occams:/app/occams
+      - ./alembic:/app/alembic
+      - ./develop.ini:/app/develop.ini
+      - ./bower.json:/app/bower.json
+      - ./tests:/app/tests
+      - uploads:/files/uploads
+      - exports:/files/exports
 
-postgres:
-  build: https://github.com/razorlabs/pg-json-audit-trigger.git
-  restart: always
-  environment:
-    - POSTGRES_USER=occams
-    - POSTGRES_DB=occams
-  ports:
-    - "5432:5432"
-  volumes:
-    - postgres:/var/lib/postgresql/data/
+  celery:
+    build: .
+    command: dockerize -wait tcp://postgres:5432 ./docker-celery-entrypoint.sh
+    restart: always
+    environment:
+      - C_FORCE_ROOT=1
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - ./occams:/app/occams
+      - ./develop.ini:/app/develop.ini
+      - uploads:/files/uploads
+      - exports:/files/exports
 
-postgres-tests:
-  build: https://github.com/razorlabs/pg-json-audit-trigger.git
-  restart: always
-  environment:
-    - POSTGRES_USER=test
-    - POSTGRES_DB=test
-  ports:
-    - "6543:5432"
+  postgres:
+    build: https://github.com/razorlabs/pg-json-audit-trigger.git
+    restart: always
+    environment:
+      - POSTGRES_USER=occams
+      - POSTGRES_PASSWORD=occams
+      - POSTGRES_DB=occams
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres:/var/lib/postgresql/data/
 
-redis:
-  image: redis:latest
-  restart: always
-  ports:
-    - "6379:6379"
+  postgres-tests:
+    build: https://github.com/razorlabs/pg-json-audit-trigger.git
+    restart: always
+    environment:
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
+      - POSTGRES_DB=test
+    ports:
+      - "6543:5432"
+
+  redis:
+    image: redis:5.0.8
+    restart: always
+    ports:
+      - "6379:6379"
+
+volumes:
+  exports:
+  postgres:
+  uploads:
