--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,10 @@
     "jquery-ui": "1.12.x",
     "jquery-cookie": "1.4.x",
     "jquery-validate": "1.13.x",
-    "knockout": "3.x.x",
-    "knockout-sortable": "0.x.x",
+    "knockout": "3.5.x",
+    "knockout-sortable": "1.2.x",
     "eonasdan-bootstrap-datetimepicker": "3.1.x",
-    "select2": "3.x.x",
+    "select2": "3.5.x",
     "select2-bootstrap-css": "1.4.x",
     "bootstrap-fileinput": "4.1.x",
     "bootstrap-switch": "3.3.x"
